--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.0",
     "@angular/material": "^9.0.0",
     "@angular/platform-browser": "~9.0.0",
@@ -58,7 +59,9 @@
     "@ngx-share/button": "^7.1.4",
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
+    "angularfire2": "^5.4.2",
     "core-js": "^3.6.4",
+    "firebase": "^7.15.0",
     "hammerjs": "^2.0.8",
     "ngx-audio-player": "~9.0.4",
     "rxjs": "~6.5.4",
@@ -66,11 +69,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular-devkit/build-ng-packagr": "~0.900.1",
-    "webpack": "^4.6.0",
-    "tsickle": "~0.37.1",
-    "node-sass": "^4.0.0",
     "@angular/cli": "~9.0.1",
     "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "~9.0.0",
@@ -88,9 +88,12 @@
     "karma-jasmine-html-reporter": "^1.5.2",
     "karma-teamcity-reporter": "^1.1.0",
     "ng-packagr": "^9.0.0",
+    "node-sass": "^4.14.1",
     "protractor": "~5.4.3",
     "ts-node": "~8.6.2",
+    "tsickle": "~0.37.1",
     "tslint": "^5.0.0",
-    "typescript": "~3.6.4"
+    "typescript": "~3.6.4",
+    "webpack": "^4.6.0"
   }
 }
