--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirects"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -182,8 +183,5 @@
   "defaultProject": "ngx-audio-player-demo",
   "cli": {
     "analytics": "a0e42aed-9d64-4aaf-ae40-fa8364b8db97"
-  },
-  "glob": "_redirects",
-  "input": "src",
-  "output": "/"
+  }
 }
