--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@ngx-share/core": "^7.1.4",
     "angularfire2": "^5.4.2",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
     "firebase": "^7.15.0",
     "hammerjs": "^2.0.8",
     "ngx-audio-player": "~9.0.4",
@@ -96,6 +97,4 @@
     "typescript": "~3.6.4",
     "webpack": "^4.6.0"
   }
-
-  }
-
+}
