--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@auth0/angular-jwt": "^4.2.0",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
@@ -60,6 +61,7 @@
     "@ngx-share/buttons": "^7.1.4",
     "@ngx-share/core": "^7.1.4",
     "angularfire2": "^5.4.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "firebase": "^7.15.0",
@@ -82,15 +84,16 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "karma-teamcity-reporter": "^1.1.0",
     "ng-packagr": "^9.0.0",
+    "ng2-charts": "^2.3.2",
     "node-sass": "^4.14.1",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.6.2",
     "tsickle": "~0.37.1",
     "tslint": "^5.0.0",
